// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input.style StyledInput should cover when passed isInvalid=true 1`] = `
<input
  className="sc-bdVaJa euRPep"
/>
`;

exports[`Input.style StyledInput should render correctly 1`] = `
<input
  className="sc-bdVaJa cmfyDO"
/>
`;
